kubernetes/manifests/joplin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: joplin
  labels:
    name: joplin
