kubernetes/manifests/joplin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: joplin
  namespace: joplin
  labels:
    app: joplin
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: joplin
  template:
    metadata:
      labels:
        app: joplin
    spec:
      securityContext:
        fsGroup: 1001
        runAsGroup: 1001
        runAsNonRoot: true
        runAsUser: 1001
      containers:
      - name: joplin-container
        image: joplin/server:3.4.3
        ports:
        - containerPort: 22300
          protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          readOnlyRootFilesystem: false
        resources:
          requests:
            memory: 256Mi
            cpu: 250m
          limits:
            memory: 512Mi
            cpu: 500m
        volumeMounts:
        - name: saml-config
          mountPath: /opt/saml/config
          readOnly: true
        startupProbe:
          httpGet:
            path: /api/ping
            port: 22300
            scheme: HTTP
            httpHeaders:
            - name: Host
              value: notes.nullservers.com
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 30
          successThreshold: 1
        livenessProbe:
          httpGet:
            path: /api/ping
            port: 22300
            scheme: HTTP
            httpHeaders:
            - name: Host
              value: notes.nullservers.com
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /api/ping
            port: 22300
            scheme: HTTP
            httpHeaders:
            - name: Host
              value: notes.nullservers.com
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
          successThreshold: 1
      volumes:
      - name: saml-config
        persistentVolumeClaim:
          claimName: joplin-saml-config
      imagePullSecrets:
      - name: dockerhub-token
