kubernetes/manifests/joplin/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: joplin-http-route
  namespace: joplin
  annotations:
    external-dns.alpha.kubernetes.io/hostname: notes.nullservers.com
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
      sectionName: https-wildcard
  hostnames:
    - "notes.nullservers.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: joplin
          port: 22300
