kubernetes/manifests/joplin/cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: joplin-network-policy
  namespace: joplin
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway-system
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: cloudflare
      toPorts:
        - ports:
            - port: "22300"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: "pgsql.nullservers.com"
      toPorts:
        - ports:
            - port: "5432"
    - toFQDNs:
        - matchName: pool.ntp.org
        - matchName: smtp.resend.com
